k8s/manifests/rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-visualizer
